<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/white"
    card_view:cardCornerRadius="3dp"
    card_view:cardElevation="5dp"
    card_view:cardUseCompatPadding="true">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:id="@+id/r1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp">

    <ImageView
        android:id="@+id/img_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/info"/>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_toRightOf="@id/img_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/txt_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/raymond"
            android:textColor="@color/bluedark"/>

        <TextView
            android:id="@+id/txt_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_2"
           android:textSize="10sp"/>
    </LinearLayout>




</RelativeLayout>

    <RelativeLayout
        android:layout_margin="5dp"
        android:id="@+id/r2"
        android:layout_below="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:orientation="vertical"
        android:padding="2dp">

        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/img_2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/user"
            />

        <LinearLayout
            android:id="@+id/l2"
            android:layout_toRightOf="@id/img_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="5dp"
                android:id="@+id/txt_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User"
                android:textColor="@color/bluedark"/>


        </LinearLayout>




    </RelativeLayout>
      <RelativeLayout
          android:id="@+id/r3"
          android:layout_below="@+id/r2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/lightgrey"
          android:layout_marginTop="10dp">

          <TextView
              android:id="@+id/txt_4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="5dp"
              android:layout_marginLeft="15dp"
              android:text="@string/like"/>

          <TextView
              android:id="@+id/txt_5"
              android:layout_toRightOf="@+id/txt_4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="5dp"
              android:layout_marginLeft="10dp"
              android:text="@string/comment"/>
      </RelativeLayout>
</RelativeLayout>

</android.support.v7.widget.CardView>

</LinearLayout>